--- a/web.html
+++ b/web.html
@@ -1,4 +1,10 @@
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Basics</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA4PB8hE8pKj5T9P0pLtrHgI5xNJYz8cCf5F5R8uF3wG5AKF2w6kVmgE7OgQ96" crossorigin="anonymous">
+  </head>
         <div class="col-12 bg-danger text-white text-center p-3">
           <h1>News Website</h1>
           <p>Breaking stories, latest updates</p>
