--- a/web.html
+++ b/web.html
@@ -1,48 +1,13 @@
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Basics</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA4PB8hE8pKj5T9P0pLtrHgI5xNJYz8cCf5F5R8uF3wG5AKF2w6kVmgE7OgQ96" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-        <div class="col-12 bg-danger text-white text-center p-3">
-          <h1>News Website</h1>
-          <p>Breaking stories, latest updates</p>
-        </div>
-      </div>
-
-      <!-- Top Row - Main Story + Side Stories -->
-      <div class="row">
-        <div class="col-8 bg-light">Main Story - Large Image & Headline</div>
-        <div class="col-4">
-          <div class="row">
-            <div class="col-12 bg-secondary text-white">Side Story 1</div>
-            <div class="col-12 bg-secondary text-white">Side Story 2</div>
-            <div class="col-12 bg-secondary text-white">Side Story 3</div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Second Row - Grid of 4 Smaller Stories -->
-      <div class="row">
-        <div class="col-3 bg-warning border">Story 1</div>
-        <div class="col-3 bg-warning border">Story 2</div>
-        <div class="col-3 bg-warning border">Story 3</div>
-        <div class="col-3 bg-warning border">Story 4</div>
-      </div>
-
-      <!-- Third Row - 3 Columns for Additional Stories -->
-      <div class="row">
-        <div class="col-4 bg-info border">Lower Story 1</div>
-        <div class="col-4 bg-info border">Lower Story 2</div>
-        <div class="col-4 bg-info border">Lower Story 3</div>
-      </div>
-
-      <!-- Footer -->
-      <div class="row">
-        <div class="col-12 bg-dark text-white text-center p-3">
-          <p>&copy; 2025 News Website - All Rights Reserved</p>
-        </div>
-      </div>
-
-    </div>
+  <body>
+    <h1>Hello, world!</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
