--- a/web.html
+++ b/web.html
@@ -28,8 +28,12 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Hand Hooks</a></li>
             <li><a class="dropdown-item" href="#">Eye Patches</a></li>
-            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Peg Legs</a></li>
+            <li><a class="dropdown-item" href="#">Cannons</a></li>
+            <li><a class="dropdown-item" href="#">Ships</a></li>
+            <li><a class="dropdown-item" href="#">Treasure Maps</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">View All</a></li>
           </ul>
         </li>
       </ul>
