--- a/web.html
+++ b/web.html
@@ -47,6 +47,13 @@
     <div class="page-header">
       <h1>Test header</h1>
     </div>
+
+     <div class="row">
+        <div class="col-4 bg-info border">Lower Story 1</div>
+        <div class="col-4 bg-info border">Lower Story 2</div>
+        <div class="col-4 bg-info border">Lower Story 3</div>
+      </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
