--- a/web.html
+++ b/web.html
@@ -45,7 +45,7 @@
   </div>
 </nav>
     <div class="page-header">
-      <h1>Test header</h1>
+       <h1 class="text-center">Captain Hook's</h1>
     </div>
 
      <div class="row">
@@ -53,7 +53,7 @@
         <div class="col-4 bg-info border">Lower Story 2</div>
         <div class="col-4 bg-info border">Lower Story 3</div>
       </div>
-        <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-left" alt="...">
+        <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-left" height ="200px" width ="200px">
         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-right" alt="...">
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
