--- a/web.html
+++ b/web.html
@@ -52,18 +52,18 @@
       </div>
     </div>
 
-     <div class="column">
-       <div class="row">
+     <div class="row">
+       <div class="col">
         <div class="col-4 bg-info border">Ships</div>
-         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-left" height ="200px" width ="200px">
+         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height ="200px" width ="200px">
        </div>
-       <div class="row">
+       <div class="col">
         <div class="col-4 bg-info border">Lower Story 1</div>
-         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-left" height ="200px" width ="200px">
+         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height ="200px" width ="200px">
        </div>
-      <div class="row">
+      <div class="col">
         <div class="col-4 bg-info border">Lower Story 1</div>
-        <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" class="rounded float-left" height ="200px" width ="200px">
+        <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height ="200px" width ="200px">
       </div>
       </div>
         
