--- a/web.html
+++ b/web.html
@@ -72,7 +72,7 @@
   </body>
 
   <!-- Footer -->
-<footer class=" text-center " style="background-color:#ffffff;">
+<footer class=" text-center " bg-body-tertiary>
   <!-- Grid container -->
   <div class="container p-4">
 
