--- a/web.html
+++ b/web.html
@@ -119,10 +119,7 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        distinctio earum repellat quaerat voluptatibus placeat nam,
-        commodi optio pariatur est quia magnam eum harum corrupti dicta,
-        aliquam sequi voluptate quas.
+        We Hook you in with good prices then blast you with a blunderbuss
       </p>
     </section>
     <!-- Section: Text -->
@@ -134,7 +131,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 2020 Copyright:
-    <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-dark" href="https://hambojambo222.github.io/bootstrap-web/web.html">Captain Hook's</a>
   </div>
   <!-- Copyright -->
 
