--- a/web.html
+++ b/web.html
@@ -55,7 +55,7 @@
      <div class="row">
        <div class="col">
         <div class="text-center" class="col-8 bg-info border">Ships</div>
-         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height ="400px" class="col-8 bg-info border">
+         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height = "auto" class="col-8 bg-info border">
        </div>
        <div class="col">
         <div class="text-center" class="col-8 bg-info border" width="420px">Peg Legs</div>
