--- a/web.html
+++ b/web.html
@@ -57,6 +57,7 @@
         <div class="col-8 bg-info border">Ships</div>
          <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height = "auto" class="col-8 bg-info border">
         <p>Shop from our finest collection of antique ships</p>
+         <button class="btn btn-outline-success" type="submit">Shop Now</button>
        </div>
        <div class="col">
         <div class="col-8 bg-info border" width="420px">Peg Legs</div>
