--- a/web.html
+++ b/web.html
@@ -55,7 +55,7 @@
      <div class="row">
        <div class="col">
         <p class="text-center"> Ships </p>
-         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height = "300px" width="300px">
+         <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height = "300px" width="300px" class="center">
         <p class="text-center" >Shop from our finest collection of antique ships</p>
          <button class="btn btn-outline-success" type="submit">Shop Now</button>
        </div>
