--- a/web.html
+++ b/web.html
@@ -69,6 +69,24 @@
       </div>
       </div>
 
+
+    <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
+            <p>Shop from the widest range of authentic and orignal pirate ships</p>
+          </div>
+          <div class="col">
+            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
+            <p>Aerobite (White / Red, White / Green, White / Blue)</p>
+          </div>
+          <div class="col">
+            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
+            <p>Aerobite Boost (Dark Gray / Yellow, Gray /Red)</p>
+          </div>
+        </div>
+      </div>
+    
     <div class="row">
        <div class="col">
         <div class="col-8 bg-info border" width="420px">Ships</div>
