--- a/web.html
+++ b/web.html
@@ -75,6 +75,7 @@
           <div class="col">
             <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
             <p>Shop from the widest range of authentic and orignal pirate ships</p>
+            <button class="btn btn-outline-success" type="submit">Shop Now</button>
           </div>
           <div class="col">
             <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
