--- a/web.html
+++ b/web.html
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
+              <img class="card-img-top" src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Ships</h5>
                 <p class="card-text">Shop from the widest range of authentic and orignal pirate ships</p>
