--- a/web.html
+++ b/web.html
@@ -65,12 +65,24 @@
             </div>
           </div>
           <div class="col">
-            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
-            <p>Aerobite (White / Red, White / Green, White / Blue)</p>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ships</h5>
+                <p class="card-text">Shop from the widest range of authentic and orignal pirate ships</p>
+                <a href="#" class="btn btn-primary">Buy Now</a>
+              </div>
+            </div>
           </div>
           <div class="col">
-            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
-            <p>Aerobite Boost (Dark Gray / Yellow, Gray /Red)</p>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ships</h5>
+                <p class="card-text">Shop from the widest range of authentic and orignal pirate ships</p>
+                <a href="#" class="btn btn-primary">Buy Now</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -78,9 +90,14 @@
    <div class="container text-center">
         <div class="row">
           <div class="col">
-            <img src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" height="300px" width="300px">
-            <p>Shop from the widest range of authentic and orignal pirate ships</p>
-            <button class="btn btn-outline-success" type="submit">Shop Now</button>
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="https://img.freepik.com/premium-vector/cartoon-drawing-pirate-ship-with-pirate-ship-top_646696-8323.jpg?semt=ais_hybrid" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ships</h5>
+                <p class="card-text">Shop from the widest range of authentic and orignal pirate ships</p>
+                <a href="#" class="btn btn-primary">Buy Now</a>
+              </div>
+            </div>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
