--- a/web.html
+++ b/web.html
@@ -124,6 +124,111 @@
         </div>
       </div>
         
+
+
+
+
+  <div class="container text-center">
+        <div class="row" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
+
+          <div class="col">
+            <p>Nanoflare 1000</p>
+            <div id="Nanoflare1000Carousel" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <p>Nanoflare 1000 Play</p>
+                  <img src="Images_For_Web\nanoflare1000Play.jpeg" height="250px" width="200px">
+                </div>
+                <div class="carousel-item">
+                  <p>Nanoflare 1000 Game</p>
+                  <img src="Images_For_Web\nanoflare1000Game.jpeg" height="250px" width="200px">
+                </div>
+                <div class="carousel-item">
+                  <p>Nanoflare 1000 Tour</p>
+                  <img src="Images_For_Web\nanoflare1000Tour.jpeg" height="250px" width="200px">
+                </div>
+                <div class="carousel-item">
+                  <p>Nanoflare 1000Z</p>
+                  <img src="Images_For_Web\nanoflare1000Z.jpeg" height="250px" width="200px">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#Nanoflare1000Carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#Nanoflare1000Carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            </div>
+
+            <div class="col">
+              <p>ArcSaber 11</p>
+              <div id="arcSaberCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <p>ArcSaber 11 Play</p>
+                    <img src="Images_For_Web\arcsaber11Play.jpeg" height="250px" width="200px">
+                  </div>
+                  <div class="carousel-item">
+                    <p>ArcSaber 11 Tour</p>
+                    <img src="Images_For_Web\arcsaber11Tour.jpeg" height="250px" width="200px">
+                  </div>
+                  <div class="carousel-item">
+                    <p>ArcSaber 11 Pro</p>
+                    <img src="Images_For_Web\arcsaber11Pro.jpeg" height="250px" width="200px">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#arcSaberCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#arcSaberCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+              </div>
+
+              <div class="col">
+                <p>Astrox 88</p>
+                <div id="Astrox88Carousel" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <p>Astrox 88 Play</p>
+                      <img src="Images_For_Web\astrox88Play.jpeg" height="250px" width="200px">
+                    </div>
+                    <div class="carousel-item">
+                      <p>Astrox 88D Game</p>
+                      <img src="Images_For_Web\astrox88DGame.jpeg" height="250px" width="200px">
+                    </div>
+                    <div class="carousel-item">
+                      <p>Astrox 88D Tour</p>
+                      <img src="Images_For_Web\astrox88DTour.jpeg" height="250px" width="200px">
+                    </div>
+                    <div class="carousel-item">
+                      <p>Astrox 88D Pro</p>
+                      <img src="Images_For_Web\astrox88DPro.jpeg" height="250px" width="200px">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#Astrox88Carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#Astrox88Carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+                </div>
+
+          </div>
+        </div>
+      </div>
+
+
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
