--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
   <body style= "background-color: lightblue; ">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Captain Hook's</a>
+    <a class="navbar-brand" href="#" ><img src="https://img.freepik.com/free-vector/anchor-with-chain-realistic-style_1284-35842.jpg?semt=ais_hybrid" height="40px" width="40px"> Captain Hook's</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,15 +47,15 @@
 </nav>
 
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="page-header">
         <p> </p>
        <h1 class="text-center"> Captain Hook's</h1>
-        <p> </p>
+        <p class="text-center"> Since 2025 </p>
       </div>
     </div>
 
-    <div class="container text-center d-flex justify-content-center" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
+    <div class="container-fluid text-center d-flex justify-content-center" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
         <div class="row" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
           <div class="col">
             <div class="card" style="width: 18rem;">
@@ -90,7 +90,16 @@
         </div>
       </div>
     
-   <div class="container text-center" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
+      <div class="container-fluid">
+        <div class="page-header">
+          <p> </p>
+         <p class="text-center"> all of our products come from authentic pirates from around the globe</p>
+          <p class="text-center"> directly shipped to a location that suits your needs </p>
+        </div>
+      </div>
+
+
+   <div class="container-fluid text-center d-flex justify-content-center" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
         <div class="row" style="margin-bottom: 50px; margin-top: 50px; margin-left: 20px; margin-right: 20px; padding: 10px;">
           <div class="col">
             <div class="card" style="width: 18rem;">
@@ -135,7 +144,7 @@
           
             <div class="col">
                 <p> </p>
-              <h1>All Items</h1>
+              <h1 class = "container-fluid" style="background-color: rgba(0, 210, 247, 0.616);">All Items</h1>
                 <p> </p>
               <div id="arcSaberCarousel" class="carousel slide">
                 <div class="carousel-inner">
@@ -167,7 +176,6 @@
 
           </div>
         </div>
-      </div>
 
 
 
@@ -180,10 +188,6 @@
   <!-- Grid container -->
   <div class="container p-4">
 
-
-    <!-- Section: Form -->
-    <section class="">
-      <form action="">
         <!--Grid row-->
         <div class="row d-flex justify-content-center">
           <!--Grid column-->
